# gitlab-automation-recipes

./: CONTRIBUTING.md  README.md  pyproject.toml
src/: cli.py
src/providers/gitlab/: cleanup_old_pipelines.py
tests/: test_imports.py
