[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-automation-recipes"
version = "0.1.0"
description = "Small, modular automation scripts for GitLab administrators and DevOps engineers."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
dependencies = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
  "click>=8.1.0"
]

[project.scripts]
gitlab-recipes = "gitlab_automation_recipes.cli:cli"
